[tool.poetry]
name = "mdiae-m4-tp-final"
version = "0.1.0"
description = ""
authors = ["Lucas Paradisi <paradisi.lucas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.7"
pandas = "^2.3.3"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
