[tool.poetry]
name = "mdiae-m4-tp-final"
version = "0.1.0"
description = ""
authors = ["Lucas Paradisi <paradisi.lucas@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
seaborn = "^0.13.2"
plotly = "^6.3.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
pytest-cov = "^7.0.0"
coverage = "^7.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
